# handlebars-magic

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  lib.rs  main.rs
templates/: README.md
templates/src/: main.rs
