[package]
name = "handlebars-magic"
version = "0.4.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities", "development-tools", "template-engine"]
description = """
Generates documentation from handlebars templates.
"""
homepage = "https://github.com/rust-utility/handlebars-magic"
keywords = ["handlebars"]
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rust-utility/handlebars-magic"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
handlebars = "4.2"
handlebars_misc_helpers = "0.12"