[package]
name = "handlebars-magic"
version = "0.4.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities", "development-tools", "template-engine"]
description = """
Quickly and flexibly generate content based on handlebars templates.
"""
homepage = "https://github.com/rust-utility/handlebars-magic"
keywords = ["handlebars"]
license = "Unlicense OR MIT"
repository = "https://github.com/rust-utility/handlebars-magic"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
handlebars = "5.1"
handlebars_misc_helpers = "0.15"