[package]
name = "handlebars-magic"
version = "0.6.0"
authors = ["Alexander Korolev <alexander.korolev.germany@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities", "development-tools", "template-engine"]
description = """
Quickly and flexibly generate content based on handlebars templates.
"""
homepage = "https://github.com/rust-utility/handlebars-magic"
keywords = ["handlebars"]
license = "Unlicense OR MIT"
repository = "https://github.com/rust-utility/handlebars-magic"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", default-features = false, features = ["derive", "help", "std", "usage"] }
handlebars = "5.1"
handlebars_misc_helpers = { version = "0.15", default-features = false, features = ["http_attohttpc", "json", "string"] }

# workaround for https://github.com/cross-rs/cross/issues/1345
[package.metadata.cross.target.x86_64-unknown-netbsd]
pre-build = [
    "mkdir -p /tmp/netbsd",
    "curl https://cdn.netbsd.org/pub/NetBSD/NetBSD-9.2/amd64/binary/sets/base.tar.xz -O",
    "tar -C /tmp/netbsd -xJf base.tar.xz",
    "cp /tmp/netbsd/usr/lib/libexecinfo.so /usr/local/x86_64-unknown-netbsd/lib",
    "rm base.tar.xz",
    "rm -rf /tmp/netbsd",
]
